# madmanjj.github.io

./: Cargo.toml  Dioxus.toml  build.rs
.github/workflows/: deploy.yml
assets/: main.css  tailwind.css
assets/books/: 2025_books.json  2026_books.json
src/: components.rs  main.rs  route.rs  views.rs
src/components/: aside.rs  footer.rs  home.rs  layout.rs  main.rs  mod.rs  page_not_found.rs
src/views/: home.rs  projects.rs  reading_list.rs  resume.rs
